# qgis-stubs

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/PULL_REQUEST_TEMPLATE/: stubgen-pr.md
.github/workflows/: generate-stubs.yml  publish-pypi.yml
qgis/: 3d.pyi  _3d.pyi  __init__.py  __init__.pyi  _analysis.pyi  _core.pyi  _gui.pyi  _qgis3d.pyi  _server.pyi  _types.pyi  analysis.pyi  core.pyi  gui.pyi  processing.pyi  server.pyi  user.py  user.pyi  utils.py  utils.pyi
qgis-stubs/: _3d.pyi  _3d_p.pyi  __init__.py  __init__.pyi  _analysis.pyi  _core.pyi  _gui.pyi  _server.pyi  _types.pyi  analysis.pyi  core.pyi  gui.pyi  processing.pyi  server.pyi  user.py  utils.py  utils.pyi
qgis-stubs/PyQt/: QtCore.py  QtGui.py  QtMultimedia.py  QtNetwork.py  QtPrintSupport.py  QtQuick.py  QtQuickWidgets.py  QtSerialPort.py  QtSql.py  QtWebEngineCore.py  QtWebEngineQuick.py  QtWebEngineWidgets.py  QtWidgets.py
qgis-stubs/_3d/: __init__.py
qgis-stubs/analysis/: __init__.py
qgis-stubs/core/: __init__.py  __init__.pyi  _additions.pyi
qgis-stubs/gui/: __init__.py
qgis-stubs/processing/: __init__.pyi  algfactory.py  algfactory.pyi
qgis-stubs/server/: __init__.py
qgis-stubs/testing/: __init__.py  mocked.py
qgis/3d/: __init__.py
qgis/analysis/: __init__.py
qgis/core/: __init__.py  __init__.pyi  _additions.py  _context_managers.py  (+1 more)
scripts/: convert-enums.py  convert-signals.py  convert_enums.py  convert_signals.py  delete-non-python.py  delete_non_python.py  inject_monkey_patches.py  search-and-replace.py  search_and_replace.py
(+25 files in other folders)
