[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "qgis-stubs"
version = "0.3.0.dev0"
authors = [
    {name = "Leonhard S.", email="leonhard-sei@outlook.com"},
]
description = "PEP561 type stubs for PyQGIS."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["qgis", "pyqgis", "stubs", "type hints", "python"]
license = "GPL-3.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development",
]
dependencies = [
    "PyQt5-stubs>=5.14",
]

[project.urls]
Repository = "https://github.com/leonhard-s/qgis-stubs"

[project.optional-dependencies]
dev = [
    "beautifulsoup4",
    "requests",
    "mypy",
    "lxml",
]

[tool.setuptools]
packages = [
    "qgis-stubs",
    "qgis-stubs._3d",
    "qgis-stubs.analysis",
    "qgis-stubs.core",
    "qgis-stubs.core.additions",
    "qgis-stubs.gui",
    "qgis-stubs.gui.additions",
    "qgis-stubs.processing",
    "qgis-stubs.server",
    "qgis-stubs.testing",
]
